# lyricsFetcher

./: .gitignore  .gitmodules  .lyricsFch  LICENSE  Makefile.in  Podfile  config.status  configure  configure.ac  lyricsFetcher.podspec  readme  readme.md
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
lyricsFetcher.xcodeproj/: project.pbxproj
src/: Makefile  Makefile.am  Makefile.in  MyMakefile  audioTag.cpp  audioTag.h  audioTag2.h  audioTag2.mm  config.h  config.h.in  config.status  configure  configure.ac  configure.in  configure.scan  file.txt  fileCtrl.cpp  fileCtrl.h  files.txt  lrcFch.cpp  lrcFch.h  lrcFch_qianqian.cpp  lrcFch_ting.cpp  lrcFch_ting.h  lyricsFetcher  main.cpp  socketTool.cpp  socketTool.h  stringConv.cpp  stringConv.h  test.cpp  threadpool.cpp  threadpool.h
